--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "canvas": "^2.7.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongodb": "^3.6.4",
+    "mongoose": "^5.12.0",
     "node-json2html": "^1.4.0",
     "text-to-image": "^2.4.4"
   }
