--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.12.0",
     "node-json2html": "^1.4.0",
+    "pug": "^3.0.2",
     "text-to-image": "^2.4.4"
   }
 }
