--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "canvas": "^2.7.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.4",
     "mongoose": "^5.12.0",
     "node-json2html": "^1.4.0",
     "pug": "^3.0.2",
-    "text-to-image": "^2.4.4"
+    "text-to-image": "^2.4.4",
+    "uuid": "^8.3.2"
   }
 }
