--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "mongodb": "^3.6.4",
     "mongoose": "^5.12.0",
     "node-json2html": "^1.4.0",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "pug": "^3.0.2",
     "text-to-image": "^2.4.4",
     "uuid": "^8.3.2"
