RByczko;2021-06-15;more fetch module work

--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "prerun": "cat fetch_base.js fetch_ending_commonjs.js > fetch_commonjs.js; cat fetch_base.js fetch_ending_ecmascriptmodule.js > fetch_ecmascriptmodule.js",
     "run": "node index.js",
     "inspect": "node inspect.js",
     "bro1": "browserify controllers/conlimiteduserjoin.js -o bro_bundle1.js",
     "bro2": "browserify bundlesource_conlimiteduserjoin.js -s bro2 -o bro_bundle2.js"
   },
+  "type": "commonjs",
   "keywords": [],
   "author": "",
   "license": "ISC",
